<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Welcome">Welcome To HESCOM Spot Billing Operations</string>
    <string name="SpotBilling">HESCOM Spot Billing</string>
    <string name="Search">Search</string>
    <string name="ConID">ConID</string>
    <string name="RRno">RRNo</string>
    <string name="Tariff">Tariff</string>
    <string name="Load">Load</string>
    <string name="OK">OK</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="Billing">Billing</string>
    <string name="Collections">Collections</string>
    <string name="Reports">Reports</string>
    <string name="Others">Others</string>
    <string name="PrevReason">Prev Reason</string>
    <string name="Status">Status</string>
    <string name="Reading">Reading</string>
    <string name="Consumption">Consumption</string>
    <string name="PowerFactor">Power Factor</string>
    <string name="MD">MD</string>
    <string name="Process">Process</string>
    <string name="Save">Save</string>
    <string name="Browse">Browse</string>
    <string name="Home">Home</string>
    <string name="Logout">Logout</string>
    <string name="BillingReport">Billing Report</string>
    <string name="StatusReport">Status Report</string>
    <string name="NotBilledReport">Not Billed Report</string>
    <string name="GPRSReport">GPRS Report</string>
    <string name="MRName">MR Name:</string>
    <string name="PrintDate">Print Date:</string>
    <string name="BilledDate">Billed Date:</string>
    <string name="TotalInstallations">Total Installations:</string>
    <string name="Billed">Billed:</string>
    <string name="NotBilled">Not Billed:</string>
    <string name="Print">Print</string>
    <string name="Summary">Summary</string>
    <string name="Details">Details</string>
    <string name="Normal">Normal:</string>
    <string name="DL">DL:</string>
    <string name="MNR">MNR:</string>
    <string name="DO">DO:</string>
    <string name="MCH">MCH:</string>
    <string name="RNF">RNF:</string>
    <string name="VA">VA:</string>
    <string name="DIS">DIS:</string>
    <string name="MS">MS:</string>
    <string name="DIR">DIR:</string>
    <string name="MB">MB:</string>
    <string name="NT">NT:</string>
    <string name="TourPlanId">TourPlanId</string>
    <string name="GPRSStatus">GPRS Status:</string>
    <string name="BillAmount">Bill Amount</string>
    <string name="GPRSSent">GPRS Sent:</string>
    <string name="GPRSNotSent">GPRS Not Sent:</string>
    <string name="PushDB">Push DB:</string>
    <string name="TodayBilledReport">Today Billed Report</string>
    <string name="Reason">Reason</string>
    <string name="MobileStatus">Network Status</string>
    <string name="DCstatus">Data Connection Status : </string>
    <string name="UploadSpeed">Upload Speed : </string>
    <string name="DownloadSpeed">Download Speed : </string>
    <string name="DataStrength">Data Strength : </string>
    <string name="SignalStrength">Signal Strength : </string>
    <string name="BatteryLevel">Battery Level : </string>
    <string name="Refresh">Refresh</string>

    <!-- Nitish 30-08-2014 -->
    <string name="MeterType">Meter Type</string>
    <string name="BatteryStatus">Battery Status</string>
    <string name="MeterPlacement">Meter Placement</string>
    <string name="MeterCondition">Meter Condition</string>
    <string name="Remarks">Remarks</string>
    <string name="MeterPhase">Meter Phase</string>
    <string name="ContactType">Contact Type</string>
    <string name="ContactNo">Contact No</string>

    <!-- Collections -->
    <string name="Arrears">Arrears</string>
    <string name="Cash">Cash</string>
    <string name="ChequeDD">Cheque/DD</string>
    <string name="ChequeDDNumber">Cheque/DD Number</string>
    <string name="ChequeDDNO">Cheque/DDNO</string>
    <string name="DueDate">Due Date</string>
    <string name="Date">Date</string>
    <string name="ddmmyyyy">dd-mm-yyyy</string>
    <string name="Bank">Bank</string>
    <string name="PaymentAmount">Payment Amount</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="Confirm">Confirm</string>
    <string name="PaymentAmountInINR">Enter Payment Amount in INR</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="CCOpen">Cash Counter Open</string>
    <string name="BatchNo">MCC TR No</string>
    <string name="TotalBillAmount">Total Bill Amt</string>
    <string name="BatchDate">Batch Date</string>
    <string name="StartTime">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="CashLimit">Cash Limit</string>
    <string name="CollectionMade">Collection Made</string>
    <string name="GenerateReceipts">Generate Receipts</string>
    <string name="CloseCashCounter">Close Cash Counter</string>
    <string name="IMEISIMNOVer">IMEI,SIM No Verification</string>
    <string name="TimeSync">Time Sync</string>
    <string name="MRStatus">MR Status</string>
    <string name="OTPVer">OTP Verification</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="SendOTP">Send OTP</string>
    <string name="Reprint">Reprint</string>
    <string name="Receipts">Receipts:</string>
    <string name="CashCounterDetails">Cash Counter Details</string>
    <string name="HescomCopyPrint">HESCOM Copy Print</string>
    <string name="CollectionDetailsReport">Collection Details</string>
    <string name="TotalReceipts">Total Receipts:</string>
    <string name="TotalAmount">Total Amount:</string>
    <string name="TotalCollAmount">Total Coll Amount:</string>
    <string name="MRCode">MR Code:</string>
    <string name="DayWiseCollectionReport">Day Wise Collection</string>
    <string name="CollAmount">Coll Amount:</string>
    <string name="SubDivision">Sub Division:</string>
    <string name="RRNoWiseCollectionReport">RRNOWise Collection</string>
    <string name="RBatchNo">Batch No:</string>
    <string name="RDate">Date:</string>
    <string name="CollAmt">Coll Amt:</string>
    <string name="Mode">Mode</string>
    <string name="PaidAmount">Paid Amount</string>
    <string name="NotAssigned">Not Assigned</string>
    <string name="Pending">Pending</string>
    <string name="CCNotAssigned">Cash Counter: Not Assigned</string>
    <string name="BillsNotSent">Bills Not Sent</string>
    <string name="RptsNotSent">Rpts Not Sent</string>
    <string name="RevenueReceipts">Revenue Receipts</string>
    <string name="MiscReceipts">Misc Receipts</string>
    <string name="RevenueAmt">Revenue Amt</string>
    <string name="MISCAmt">MISC Amt</string>
    <string name="ASDReceipts">ASD Receipts</string>
    <string name="SecondSession">Session Extension</string>
    <string name="app_name">HESCOM SpotBilling</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="BillConsumption_Reading">Reading</string>
    <string name="BillConsumption_PowerFactor">PF</string>
    <string name="BillConsumption_MD">MD</string>
    <string name="Read">Read</string>
    <string name="WriteFile">Write File</string>
    <string name="DownloadMainDB">Pull Main DB</string>
    <string name="DownloadBackUpDB">Pull BackUp DB</string>
    <string name="ThreadName">DataSendingThread</string>
    <string name="Nsoft">Nsoft (India) Services Pvt. Ltd.</string>
    <string name="About">About</string>
    <string name="PoweredBy">PoweredBy</string>
    <string name="Bluetooth">Pair Bluetooth</string>
    <string name="Send">Send</string>
    <string name="DownloadCaption">Click file name to download</string>
    
     <!-- Nitish 12-06-2017 -->    
     <string name="AboutMCC">MCC Help Content</string>
     <string name="MCCHelpDesk">Help Desk</string>
     <string name="ComplaintType">Complaint Type</string>
     

    <!-- Nitish 30-07-2015 -->
    <string name="installationstatus">Installation Status</string>
    <string name="installation">Installation</string>
    <string name="MeterFixed">Meter Fixed</string>
    <string name="AdharNo">Adhar No</string>
    <string name="VoterId">Voter ID No</string>
    <string name="MobileNo">Mobile No</string>
    <string name="ConsumerDetails">Consumer Details</string>
    <string name="MeterMake">MeterMake</string>
    <string name="SerialNo">SerialNo</string>
    <string name="MeterLocation">MeterLocation</string>
    <string name="Inside">Inside</string>
    <string name="Outside">Outside</string>
    <string name="BodySealed">Body Sealed</string>
    <string name="TerminalCover">"Terminal Cover"</string>
    <string name="TerminalCoverSealed">"Terminal Cover Sealed"</string>
    <string name="Continue">"Continue"</string>
    
    <string name="TariffwiseReport">Tariffwise Report</string>
    <string name="Demand">Demand</string>
    <string name="line">|</string>
    <string name="dash">-</string>
    <string name="ReadingDay">Reading Day:</string>
    <string name="Noofcons">No.of cons.</string>
    <string name="Total">Total</string>

    <string name="ManualBilling">Manual Billing</string>
    <string name="OpticalBilling">Optical Billing</string>
    <string name="connectOptical">Connect Optical Cable to meter and Click on ReadLT Button</string>
    
     <!-- 13-01-2021 -->
    <string name="confirm_connect">Connect device?</string>
    <string name="start_connection">Connection start</string>
    <string name="stop_connection">Connection stop</string>
    <string name="confirm_finish_text">Finish app?</string>
    <string name="usb_permission_granted">Device ready</string>
    <string name="usb_permission_not_granted">Permission not granted</string>
    <string name="no_usb">No device connected</string>
    <string name="usb_disconnected">Disconnected</string>
    <string name="usb_not_supported">USB device not supported</string>
    
</resources>