<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblMobileStatus"
        style="@style/SBLargeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
        android:text="@string/MobileStatus" />

    <TextView
        android:id="@+id/lblDCstatus"
        style="@style/SBSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/DCstatus" />

    <TextView
        android:id="@+id/lblUploadSpeed"
        style="@style/SBSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/UploadSpeed" />

    <TextView
        android:id="@+id/lblDownloadSpeed"
        style="@style/SBSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/DownloadSpeed" />
    
    <TextView
        android:id="@+id/lblDataStrength"
        style="@style/SBSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/DataStrength" />

    <TextView
        android:id="@+id/lblSignalStrength"
        style="@style/SBSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/SignalStrength" />

    <TextView
        android:id="@+id/lblBatteryLevel"
        style="@style/SBSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/BatteryLevel" />

    <Button
        android:id="@+id/btnRefresh"
        style="@style/SBButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Refresh" />

</LinearLayout>