<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
     >

    <TextView
        android:id="@+id/lblReportTPFeeder"
        style="@style/SBLargeLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/TodayBilledReport" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblReportTPFeederPrintDate"
            style="@style/SBSmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/PrintDate" />

        <TextView
            android:id="@+id/txtReportTPFeederPrintDate"
            style="@style/SBSmallLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblReportTPFeederBilledDate"
            style="@style/SBLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/BilledDate" />

        <TextView
            android:id="@+id/txtReportTPFeederBilledDate"
            style="@style/SBLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" >
        </TextView>
    </LinearLayout>
    
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblConId"
            style="@style/SBSmallLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"            
            android:text="@string/ConID"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblReading"
            style="@style/SBSmallLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Reading"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblReason"
            style="@style/SBSmallLabel"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/Reason"
            android:textStyle="bold" />
    </LinearLayout>

     <ListView
        android:id="@+id/lstReportTPFeeder"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        >
    </ListView>

    <Button
        android:id="@+id/btnReportTPFeederPrint"
        style="@style/SBButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Print" />

</LinearLayout>